--- a/src/App.css
+++ b/src/App.css
@@ -236,4 +236,78 @@ transform: scaleX(1);
 }
 /* Welcome section - end */
 
-
+/* Testimonials */
+#testimonials {
+  background-image: url("./images/blackBack.jpg");
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
+}
+.testimonials_card{
+  background-image: linear-gradient(#ffc7dc, white, white);
+  width: 90%;
+  margin-top: 75px;
+  margin-left: 5%;
+  box-shadow: -2px 4px 9px 0px #595959;
+  transition: all 1500ms;
+}
+.testimonials_card:hover{
+  transform: scale(1.05);
+  box-shadow: -3px 5px 11px 0px #595959;
+}
+.testimonials_card:hover>.avatarContainer{
+  margin-left: 20%;
+}
+.avatarContainer {
+  width: 110px;
+  height: 110px;
+  background: white;
+  border-radius: 50%;
+  transform: translate(-50%, -55px);
+  margin-left: 50%;
+  padding: 1%;
+  box-shadow: 4px 4px 15px #848484;
+  position: absolute;
+  transition: all 1500ms;
+}
+img.avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.Testimonials_fullName{
+  color: #070707;
+  text-align: center;
+  font-family: montserrat,sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+}
+.Testimonials_position{
+  color: #e22b6f;
+  text-align: center;
+  font-family: 'Pacifico', cursive;
+  font-size: 15px;
+}
+.testimonials_devider{
+  width: 50%;
+  border-bottom: solid 1px #e22b6f;
+  margin: auto;
+}
+.testimonial_card_content{
+  padding-top: 60px;
+}
+.testimonials_icon {
+  text-align: center;
+  color: #e22b6f;
+  font-size: 35px;
+  width: 100%;
+  line-height: 2;
+}
+.testimonials_quote {
+  color: #848484;
+  text-align: justify;
+  font-family: montserrat,sans-serif;
+  width: 90%;
+  margin: auto;
+}
+/* Testimonials */
