--- a/src/App.css
+++ b/src/App.css
@@ -311,3 +311,123 @@ img.avatar {
   margin: auto;
 }
 /* Testimonials */
+/* Loading */
+.loadPage {
+  width: 100%;
+  height: 100vh;
+  background-color: #0f0f0f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes circular {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+@keyframes reverse_circular {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(-360deg);
+  }
+}
+
+.circle_3 {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  width: 120px;
+  border-radius: 100%;
+  background: linear-gradient( 90deg, transparent 50%, #e22b6f);
+  z-index: 100;
+  animation: circular 2s linear infinite;
+}
+
+.circle_3_space {
+  height: 100px;
+  width: 100px;
+  border-radius: 100%;
+  background: #0f0f0f;
+}
+
+.circle_4 {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  width: 80px;
+  border-radius: 100%;
+  background: linear-gradient( 90deg, transparent 50%, #999999);
+  z-index: 100;
+  animation: reverse_circular 1s linear infinite;
+}
+
+.circle_4_space {
+  height: 60px;
+  width: 60px;
+  border-radius: 100%;
+  background: #0f0f0f;
+}
+/* Loading */
+
+/* Skills */
+#skillsSection{
+  background-image: url("./images/blackBack.jpg");
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
+}
+.tabContainer {
+  cursor: pointer;
+}
+.activeTabContainer{
+  border-bottom: solid 2px #e22b6f;
+  border-radius: 10px;
+}
+.tabTitle {
+  text-align: center;
+  font-family: 'Pacifico', cursive;
+  transition: all 500ms;
+}
+.activeTabTitle{
+  color: #e22b6f;
+  font-size: 25px;
+  transition: all 500ms;
+}
+.bg-progress {
+  background-image: linear-gradient(to right, #ffffff , #e22b6f);
+  font-size: 18px;
+}
+.progress {
+  background-color: rgba(0,0,0,.00);
+  border-radius: unset;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-top-left-radius: 25px;
+  height: 30px !important;
+}
+.progress-bar {
+  height: 30px !important;
+}
+span.progressText {
+  color: #505050;
+  font-family: 'Pacifico', cursive;
+}
+.marginTop {
+  margin-top: 75px;
+}
+p.skillLabel {
+  margin-bottom: -15px !important;
+  font-family: montserrat,sans-serif;
+}
+/* Skills */
