--- a/src/App.css
+++ b/src/App.css
@@ -469,12 +469,13 @@ p.skillLabel {
   background-size: cover;
   width: 100%;
   min-height: 100vh;
+  position: relative;
 }
 .aboutMeOverlay{
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   background-color: rgba(0,0,0,0.75);
-  position: fixed;
+  position: absolute;
   top: 0;
 }
 .segmentTitle {
@@ -503,3 +504,44 @@ p.eventDate {
   font-family: 'Pacifico', cursive;
 }
 /* About Me */
+
+/* Portfolio */
+#portfolioSection {
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
+}
+.categoryContainer {
+  min-height: 80vh;
+  position: relative;
+  background-size: cover;
+  filter: grayscale(100%);
+  transform: scale(0.95);
+  transition: all 500ms;
+}
+.categoryContainer:hover{
+  filter: grayscale(0%);
+  transform: scale(0.99);
+  cursor: pointer;
+}
+.categoryContainer:hover>.categoryTitle{
+  color: #e22b6f;
+  background: rgba(255,255,255,0.65);
+}
+.categoryTitle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  width: 100%;
+  color: white;
+  background: rgba(0,0,0,0.45);
+  font-family: 'Pacifico', cursive;
+  transition: all 500ms;
+}
+@media (max-width:992px) {
+  .categoryContainer {
+    min-height: 40vh;
+  }
+}
+/* Portfolio */
