--- a/src/App.css
+++ b/src/App.css
@@ -474,7 +474,7 @@ p.skillLabel {
 .aboutMeOverlay{
   width: 100%;
   min-height: 100%;
-  background-color: rgba(0,0,0,0.75);
+  background-color: rgba(0,0,0,0.50);
   position: absolute;
   top: 0;
 }
@@ -545,3 +545,23 @@ p.eventDate {
   }
 }
 /* Portfolio */
+
+/* photography starts */
+#photography{
+  width: 100%;
+  min-height: 100vh;
+  background-color: black;
+  background-image: url("./images/blackBack.jpg");
+ 
+}
+
+.photo{
+  width: 100%;
+  height: 500px;
+  filter: grayscale(1) brightness(0.5); 
+  transition: 0.3s linear ;
+}
+
+img:hover{
+  filter: grayscale(0) brightness(1);
+}
