--- a/src/App.css
+++ b/src/App.css
@@ -816,3 +816,43 @@ ol li {
   color: #e22b6f;
   margin: 5px 5px;
 }
+/* Other Projects */
+.otherProjectsParagraph{
+  text-align: center;
+  font-family: montserrat, sans-serif;
+}
+.otherProjectsCategoryTitle{
+  font-family: 'Pacifico', cursive;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+.activeOtherProjectsCategoryTitle{
+  color: #e22a6b;
+  cursor: auto;
+}
+.otherProjectsCategory{
+  border-bottom: solid 1px #e22a6b;
+  border-radius: 5px;
+}
+.otherProjectsImageContainer {
+  width: 100%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 8px 0px rgba(253, 0, 118, 0.2);
+  transition: all 300ms;
+}
+.otherProjectImage {
+  width: 100%;
+  border-radius: 5px;
+}
+.otherProjectsImageContainer:hover{
+  border-radius: 8px;
+  transform: scale(1.02);
+  box-shadow: 3px 3px 8px 0px rgba(253, 0, 118, 0.5);
+  cursor: pointer;
+}
+/* Other Projects */
